
message TaintedInstr {
    required CallStack call_stack = 1;
    repeated TaintQuery taint_query = 2;
}

optional TaintedInstr tainted_instr = 37;

